hphp/test/zend/bad/ext/standard/tests/math/ceil_basic.php.skipif
if (strtolower(PHP_OS) == 'darwin') {
    die('SKIP OSX does weird things with -0 so this test doesn't work there');
}